[WIP] Card Shadow

--- a/app/styles/scss/_brosa.scss
+++ b/app/styles/scss/_brosa.scss
@@ -76,11 +76,38 @@ body{
     border: none;
 }
 
+.brosa-block{
+    padding-bottom: 30px;
+}
+
 .brosa-card{
     padding: 30px 25px;;
+    border-top: 5px solid $brand-primary;
+    position: relative;
+    -webkit-box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.1);
+    -moz-box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.1);
+    box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.1);
+    transition: box-shadow 0.6s ease-in-out;
     .brosa-card-content{
         height: 250px;
         padding: 15px 0;
+    }
+    &::after{
+        content: ' ';
+        display: inline-block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        border-top: 10px solid $brand-primary;
+        border-left: 10px solid transparent;
+        width: 0;
+        height: 0;
+    }
+    &:hover{
+        -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.3);
+        -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.3);
+        box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.3);
+
     }
 }
 
