--- a/app/styles/scss/_brosa.scss
+++ b/app/styles/scss/_brosa.scss
@@ -21,7 +21,7 @@ body{
 .brosa-block{
     margin-bottom: 80px;
     &.mod-padded{
-        padding: 30px;
+        padding: 50px;
     }
     p{
         padding: 20px 0;
@@ -135,9 +135,9 @@ body{
         height: 0;
     }
     &:hover{
-        -webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.3);
-        -moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.3);
-        box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.3);
+        -webkit-box-shadow: 0px 0px 30px 0px rgba(0,0,0,0.3);
+        -moz-box-shadow: 0px 0px 30px 0px rgba(0,0,0,0.3);
+        box-shadow: 0px 0px 30px 0px rgba(0,0,0,0.3);
 
     }
 }
@@ -206,6 +206,39 @@ body{
         float: left;
         width: 100px;
         border-radius: 0;
+    }
+}
+
+.navbar-header{
+    .brosa-brand{
+        color: $text-color;
+    }
+}
+
+#brosa-navbar{
+    svg{
+        width: 25px;
+        height: 25px;
+    }
+    &.navbar-default{
+        background-color: transparent;
+        border-color: transparent;
+        li:hover{
+            background-color: $navbar-default-border;
+        }
+    }
+    &.navbar-inverse{
+        border-color: #ddd;
+        .navbar-brand{
+            color: #fff;
+        }
+        svg{
+            fill:#fff;
+        }
+        li:hover{
+            background-color: #ddd;
+        }
+
     }
 }
 
